# super-secret-santa

./: .gitignore  Cargo.toml  README.md
rs/: Cargo.toml
rs/src/: error.rs  lib.rs  participant.rs  secretsanta.rs
src/: crypto.rs  error.rs  lib.rs  participant.rs  secretsanta.rs
