[package]
name = "super-secret-santa"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
regex = "1.11.0"
rand = "0.8.5"
serde = "1.0.210"
serde-wasm-bindgen = "0.6.5"
orion = "0.17.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
rstest = "0.23.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
